src/parser/snapshots/ling__syntax__parser__item__tests__block_errors.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"{10; 11 12 13;}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(Const(ConstIdx(0))),
    Expr(Const(ConstIdx(1))),
    Expr(Const(ConstIdx(2))),
    Expr(Const(ConstIdx(3))),
  ],
  final_expr: Unit,
)), [], [
  Unexpected(
    expected: "semicolon",
    found: Some(Span(
      start: 8,
      end: 10,
    )),
  ),
  Unexpected(
    expected: "semicolon",
    found: Some(Span(
      start: 11,
      end: 13,
    )),
  ),
])
