src/parser/snapshots/ling__syntax__parser__item__tests__block_undelimited.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"{ if a { 12 } if b { 12 } }\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(If(
      branches: [
        IfBranch(
          cond: Var(Simple(Unresolved("a"))),
          then: Block(
            stmts: [],
            final_expr: Const(ConstIdx(0)),
          ),
        ),
      ],
      else_: None,
    )),
  ],
  final_expr: If(
    branches: [
      IfBranch(
        cond: Var(Simple(Unresolved("b"))),
        then: Block(
          stmts: [],
          final_expr: Const(ConstIdx(1)),
        ),
      ),
    ],
    else_: None,
  ),
)), [], [])
