src/parser/snapshots/ling__syntax__parser__item__tests__func_with_missing_ret_type.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"foo(a: uint) -> {}\", |p| p.parse_func())"
---
(Err(Unexpected(
  expected: "a type",
  found: Some(Span(
    start: 16,
    end: 18,
  )),
)), [], [])
