src/parser/snapshots/ling__syntax__parser__item__tests__func_with_missing_rparen.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"foo(a: uint, {}\", |p| p.parse_func())"
---
(Err(Unexpected(
  expected: "an identifier",
  found: Some(Span(
    start: 13,
    end: 15,
  )),
)), [
  Token(
    span: Span(
      start: 3,
      end: 4,
    ),
    kind: Bracket(Opening(Round)),
  ),
], [])
