src/parser/snapshots/ling__syntax__parser__item__tests__invalid_assignment_target.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"a + b = 12\", |p| p.parse_stmt())"
---
(Err(InvalidAssignmentTarget(Span(
  start: 0,
  end: 5,
))), [], [])
