src/parser/snapshots/ling__syntax__parser__item__tests__return_assignment.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"{ a = b }\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Assignment(
      lhs: Simple(Unresolved("a")),
      rhs: Var(Simple(Unresolved("b"))),
    ),
  ],
  final_expr: Dummy,
)), [], [
  InvalidImplicitReturn(Span(
    start: 2,
    end: 7,
  )),
])
